@@ -6,6 +6,7 @@ importFrom(foreach,getErrorValue)
 importFrom(foreach,getResult)
 importFrom(foreach,makeAccum)
 importFrom(foreach,setDoPar)
+importFrom(future,Future)
 importFrom(future,FutureError)
 importFrom(future,future)
 importFrom(future,getGlobalsAndPackages)
